--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ jobs:
     ## define job to build and publish docker image
     build-and-push-docker-image:
         name: Build Docker image and push to DockerHub and Github Container Registry
-        runs-on: alpine-latest
+        runs-on: ubuntu-latest
         permissions:
             contents: read
             packages: write
