--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -14,7 +14,7 @@ jobs:
     ## prevent GitHub from suspending cronjob based triggers due to repository inactivity
     keepalive-cronjob-based-github-actions:
         name: Keepalive Workflow
-        runs-on: alpine-latest
+        runs-on: ubuntu-latest
 
         steps:
             ## https://github.com/actions/checkout
